fix: changes made to the social media buttons in footer (#1094)
* Social media icons not visible in footer bug is fixed

* bug: Social media icons not visible in footer bug is fixed

* fix: removed contactUs button and used react-fonts

* fix: minor ajustments in icon size and colour

* fix: styles added in css file

---------

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -105,7 +105,7 @@
   justify-content: center;
   align-items: center;
   transition: all 0.3s ease-in;
-  cursor: pointer;
+  cursor:pointer;
 }
 .social-btn:hover {
   transform: scale(1.1);
@@ -117,13 +117,10 @@
 }
 
 .twitter:hover {
-  background-color: #00acee;
+  background-color: #020202;
 }
 .github:hover {
   background-color: black;
-}
-.cont:hover {
-  background-color: #ff725e;
 }
 .fa-brands {
   font-size: 20px;
@@ -134,11 +131,22 @@
   margin-top: 8px;
 }
 
-.fa-twitter {
+.FaSquareXTwitter {
   margin-top: 5px;
+
 }
 
-.fa-github {
+.github-icon{
+  font-size: 1.55rem ;
+  color:#e26959;
+}
+
+.twitter-icon{
+  font-size: 1.55rem ;
+  color:#e26959;
+}
+
+.FaGithub {
   margin-top: 4px;
 }
 
